docs/pages/versions/v57.0.0/sdk/ui/drop-in-replacements/slider.mdx
---
title: Slider
description: A slider compatible with @react-native-community/slider.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A `Slider` component with an API compatible with [`@react-native-community/slider`](https://www.npmjs.com/package/@react-native-community/slider). It uses a Material 3 `Slider` on Android, a SwiftUI `Slider` on iOS, and a native `<input type="range">` element on web.

Under the hood this component wraps the platform-specific `@expo/ui` primitives:

- **Android**: [Jetpack Compose Slider](../jetpack-compose/slider)
- **iOS**: [SwiftUI Slider](../swift-ui/slider)

If you need lower-level control, use those primitives directly.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/community-slider/android-light.webp',
    darkSrc: '/static/images/expo-ui/community-slider/android-dark.webp',
    alt: 'A Material 3 slider at the middle of its range',
  }}
  ios={{
    src: '/static/images/expo-ui/community-slider/ios-light.webp',
    darkSrc: '/static/images/expo-ui/community-slider/ios-dark.webp',
    alt: 'A slider at the middle of its range',
  }}
/>

## Installation

<APIInstallSection />

## Migrating from `@react-native-community/slider`

- Update the import from `import Slider from '@react-native-community/slider'` to `import Slider from '@expo/ui/community/slider'`.
- `onSlidingStart`, `onSlidingComplete`, `tapToSeek`, `StepMarker`, `renderStepNumber`, `thumbImage`, `minimumTrackImage`, `maximumTrackImage`, `trackImage`, `accessibilityUnits`, `accessibilityIncrements`, `testID`, and `ref.updateValue` are not yet supported.
- On iOS, `maximumTrackTintColor` and `thumbTintColor` have no visual effect — SwiftUI's `Slider` only exposes the minimum (active) track tint. `minimumTrackTintColor` works on both platforms.

## Basic usage

<ComponentExample
  title="SliderExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-slider-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-slider-basic-android-dark.webp',
    alt: 'A Material 3 slider at the middle of its range above a Value label',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-slider-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-slider-basic-ios-dark.webp',
    alt: 'A slider at the middle of its range above a Value label',
  }}>

```tsx
import { useState } from 'react';
import { Text, useColorScheme, View } from 'react-native';
import Slider from '@expo/ui/community/slider';

export default function SliderExample() {
  const [value, setValue] = useState(0.5);
  const colorScheme = useColorScheme();

  return (
    <View>
      <Slider value={value} onValueChange={setValue} />
      <Text style={{ color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' }}>
        Value: {value.toFixed(3)}
      </Text>
    </View>
  );
}
```

</ComponentExample>

## API

```tsx
import Slider from '@expo/ui/community/slider';
```

<APISection packageName="expo-ui/community/slider" apiName="Slider" />

</PlatformTabsGroup>
